--- a/contracts/package.json
+++ b/contracts/package.json
@@ -18,7 +18,9 @@
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.20",
+    "@types/dotenv": "^6.1.1",
     "@types/mocha": "^10.0.10",
+    "dotenv": "^17.2.1",
     "hardhat": "^2.26.1",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
