--- a/contracts/package.json
+++ b/contracts/package.json
@@ -20,6 +20,7 @@
     "@types/chai": "^4.3.20",
     "@types/dotenv": "^6.1.1",
     "@types/mocha": "^10.0.10",
+    "@types/node": "^24.1.0",
     "dotenv": "^17.2.1",
     "hardhat": "^2.26.1",
     "ts-node": "^10.9.2",
@@ -29,8 +30,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
     "@pinata/sdk": "^2.1.0",
-    "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
-    "axios": "^1.11.0"
+    "axios": "^1.11.0",
+    "form-data": "^4.0.4"
   }
 }
