--- a/contracts/package.json
+++ b/contracts/package.json
@@ -32,6 +32,7 @@
     "@pinata/sdk": "^2.1.0",
     "@types/react": "^19.1.8",
     "axios": "^1.11.0",
+    "ethers": "^6.15.0",
     "form-data": "^4.0.4"
   }
 }
