--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
     "@chakra-ui/react": "^3.22.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@openzeppelin/contracts": "^5.0.0",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.83.0",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.9",
-    "nft.storage": "^7.2.0",
+    "nft.storage": "^3.4.0",
     "qr": "^0.5.0",
     "viem": "^2.33.1",
     "wagmi": "^2.16.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@types/exif-js": "^2.3.1",
     "@types/node": "^24.1.0",
-    "@types/react": "^19.1.8"
+    "@types/react": "^19.1.8",
+    "hardhat": "^2.26.1"
   }
 }
